# page-assist-python

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  __init__.py  api.py  app.py  build.py  config.py  database.py  desktop.py  main.py  pyproject.toml  requirements.txt  start.bat  start.sh
models/: chat.py  knowledge.py  prompt.py  settings.py
pages/: 01_聊天.py  02_知识库.py  03_提示词.py  04_设置.py  05_工具.py  06_微信工具.py  主页.py
services/: ai_provider.py  chat_manager.py  mcp.py  prompt_manager.py  rag.py  search.py  tts.py  wechat.py
utils/: .pageassist_config.example.json  config_store.py  file_handler.py  markdown.py
