[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "page-assist"
version = "1.0.0"
description = "基于本地 AI 模型的 Web UI 助手 - Python 版"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Page Assist Contributors"}
]
keywords = ["ai", "assistant", "llm", "rag", "ollama", "chatbot", "streamlit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "streamlit==1.30.0",
    "sse-starlette==1.8.2",
    "sqlalchemy==2.0.25",
    "aiosqlite==0.19.0",
    "chromadb==0.4.22",
    "requests==2.31.0",
    "httpx==0.26.0",
    "aiohttp==3.9.1",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "pillow==10.2.0",
    "langchain==0.1.0",
    "langchain-community==0.0.17",
    "langchain-core==0.1.10",
    "edge-tts==6.1.10",
    "pypdf==4.0.1",
    "python-docx==1.1.0",
    "beautifulsoup4==4.12.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "black>=23.0",
    "ruff>=0.1",
]

[project.scripts]
page-assist = "main:main"

[tool.setuptools.packages.find]
include = ["main*", "app*", "api*", "config*", "database*", "desktop*", "models*", "services*", "pages*", "utils*"]
